--- a/assets/style/main.css
+++ b/assets/style/main.css
@@ -14,4 +14,5 @@
 /* Components */
 @import 'cmps/app-header.css';
 @import 'cmps/user-msg.css';
-@import 'cmps/book-preview.css'
+@import 'cmps/book-preview.css';
+@import 'cmps/book-list.css';
