--- a/assets/style/main.css
+++ b/assets/style/main.css
@@ -19,3 +19,4 @@
 @import 'cmps/book-index.css';
 @import 'cmps/book-auction.css';
 @import 'cmps/book-filter.css';
+@import 'cmps/book-details.css';
