Modify style and layout in bookList and bookPreview css

--- a/assets/style/cmps/book-list.css
+++ b/assets/style/cmps/book-list.css
@@ -1,8 +1,16 @@
-    .book-list{
+
+    .book-list {
         display: grid;
         grid-template-columns: repeat(auto-fit, 20em);
         gap: 15px;
         position: relative;
         display: "inline-block";
         max-width: 100%;
+        border-radius: 1em;
+    }
+
+    .book-list li{
+        border-style: solid;
+        border-radius: 2em;
+        background-color: var(--clr1);
     }
